--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -6,19 +6,19 @@ server:
   domain: skillflow.local
 
 database:
-  host: ${DB_HOST:localhost}
-  port: ${DB_PORT:5432}
-  user: ${DB_USER:skillflow}
-  password: ${DB_PASSWORD:skillflow}
-  name: ${DB_NAME:skillflow}
-  ssl_mode: ${DB_SSL_MODE:disable}
+  host: postgres
+  port: 5432
+  user: skillflow
+  password: skillflow
+  name: skillflow
+  ssl_mode: disable
   max_open_conns: 25
   max_idle_conns: 5
   conn_max_lifetime: 300
 
 redis:
-  host: ${REDIS_HOST:localhost}
-  port: ${REDIS_PORT:6379}
+  host: redis
+  port: 6379
   password: ${REDIS_PASSWORD:}
   db: 0
   pool_size: 10
