--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:15-alpine
@@ -63,14 +61,23 @@ services:
       retries: 5
 
   api:
-    build: .
+    build:
+      context: ..
+      dockerfile: Dockerfile
     ports:
       - "8080:8080"
     environment:
+      SERVER_PORT: 8080
+      SERVER_MODE: debug
       DB_HOST: postgres
       DB_PORT: 5432
+      DB_USER: skillflow
+      DB_PASSWORD: skillflow
+      DB_NAME: skillflow
+      DB_SSLMODE: disable
       REDIS_HOST: redis
       REDIS_PORT: 6379
+      JWT_SECRET: dev-secret-change-in-production
       MINIO_ENDPOINT: minio:9000
       ELASTICSEARCH_URL: http://elasticsearch:9200
     depends_on:
@@ -83,7 +90,7 @@ services:
       elasticsearch:
         condition: service_healthy
     volumes:
-      - ./configs:/root/configs
+      - ../configs:/root/configs
 
 volumes:
   postgres_data:
